language-server/src/tests/snapshots/gleam_language_server__tests__completion__completions_for_outside_a_function.snap
---
source: language-server/src/tests/completion.rs
expression: "\n\npub fn main() {\n  0\n}"
---
|

pub fn main() {
  0
}


----- Completion content -----
