language-server/src/tests/snapshots/gleam_language_server__tests__completion__completions_for_prelude_values.snap
---
source: language-server/src/tests/completion.rs
expression: "\npub fn main() {\n  let my_bool = T\n}\n"
---

pub fn main() {
  let my_bool = T|
}


----- Completion content -----
Error
  kind:   Constructor
  detail: gleam
  sort:   5_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   5_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   5_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   5_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   5_True
main
  kind:   Function
  detail: fn() -> a
  sort:   3_main
  desc:   app
  edits:
    [2:16-2:17]: "main"
