language-server/src/tests/snapshots/gleam_language_server__tests__completion__completions_for_record_access_known_variant.snap
---
source: language-server/src/tests/completion.rs
expression: "\ntype Wibble {\n  Wibble(a: Int, b: Int, c: Int, d: Int)\n  Wobble(z: Bool)\n}\n\nfn fun(some_wibble: Wibble) {\n  case some_wibble {\n    Wibble(..) as w -> w.a\n    Wobble(..) -> panic\n  }\n}\n"
---

type Wibble {
  Wibble(a: Int, b: Int, c: Int, d: Int)
  Wobble(z: Bool)
}

fn fun(some_wibble: Wibble) {
  case some_wibble {
    Wibble(..) as w -> w.a|
    Wobble(..) -> panic
  }
}


----- Completion content -----
a
  kind:   Field
  detail: Int
  sort:   02_a
b
  kind:   Field
  detail: Int
  sort:   02_b
c
  kind:   Field
  detail: Int
  sort:   02_c
d
  kind:   Field
  detail: Int
  sort:   02_d
