language-server/src/tests/snapshots/gleam_language_server__tests__completion__completions_for_record_access_unknown_variant.snap
---
source: language-server/src/tests/completion.rs
expression: "\ntype Wibble {\n  Wibble(a: Int, b: Int, c: Int, d: Int)\n  Wobble(a: Int, z: Bool)\n}\n\nfn fun(some_wibble: Wibble) {\n  some_wibble.a\n}\n"
---

type Wibble {
  Wibble(a: Int, b: Int, c: Int, d: Int)
  Wobble(a: Int, z: Bool)
}

fn fun(some_wibble: Wibble) {
  some_wibble.a|
}


----- Completion content -----
a
  kind:   Field
  detail: Int
  sort:   02_a
