language-server/src/tests/snapshots/gleam_language_server__tests__completion__completions_for_record_labels.snap
---
source: language-server/src/tests/completion.rs
expression: "\npub type Wibble {\n  Wibble(wibble: String, wobble: Int)\n}\n\nfn fun() { // completion inside parens below includes labels\n  let wibble = Wibble()\n}\n"
---

pub type Wibble {
  Wibble(wibble: String, wobble: Int)
}

fn fun() { // completion inside parens below includes labels
  let wibble = Wibble(|)
}


----- Completion content -----
Error
  kind:   Constructor
  detail: gleam
  sort:   5_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   5_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   5_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   5_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   5_True
Wibble
  kind:   Constructor
  detail: fn(String, Int) -> Wibble
  sort:   3_Wibble
  desc:   app
  edits:
    [6:22-6:22]: "Wibble"
fun
  kind:   Function
  detail: fn() -> Wibble
  sort:   3_fun
  desc:   app
  edits:
    [6:22-6:22]: "fun"
wibble:
  kind:   Field
  detail: String
  sort:   1_wibble:
wobble:
  kind:   Field
  detail: Int
  sort:   1_wobble:
