language-server/src/tests/snapshots/gleam_language_server__tests__completion__completions_for_type_import_completions_without_brackets.snap
---
source: language-server/src/tests/completion.rs
expression: import dep.
---
import dep.|


----- Completion content -----
Wibble
  kind:   Class
  detail: Type
  sort:   4_Wibble
  edits:
    [0:11-0:11]: "{type Wibble}"
