language-server/src/tests/snapshots/gleam_language_server__tests__completion__constant.snap
---
source: language-server/src/tests/completion.rs
expression: "\nconst hello = 10\nconst world = he\n"
---

const hello = 10
const world = he|


----- Completion content -----
Error
  kind:   Constructor
  detail: gleam
  sort:   5_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   5_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   5_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   5_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   5_True
hello
  kind:   Constant
  detail: Int
  sort:   3_hello
  desc:   app
  edits:
    [2:14-2:16]: "hello"
world
  kind:   Constant
  detail: a
  sort:   3_world
  desc:   app
  edits:
    [2:14-2:16]: "world"
