language-server/src/tests/snapshots/gleam_language_server__tests__completion__constant_with_many_options.snap
---
source: language-server/src/tests/completion.rs
expression: "\nimport wibble.{Wobble}\n\ntype Wibble {\n  Wibble\n}\n\nconst pi = 3.14159\n\nfn some_function() {\n  todo\n}\n\nconst my_constant = a\n"
---

import wibble.{Wobble}

type Wibble {
  Wibble
}

const pi = 3.14159

fn some_function() {
  todo
}

const my_constant = a|


----- Completion content -----
Error
  kind:   Constructor
  detail: gleam
  sort:   5_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   5_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   5_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   5_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   5_True
Wibble
  kind:   EnumMember
  detail: Wibble
  sort:   3_Wibble
  desc:   app
  edits:
    [13:20-13:21]: "Wibble"
Wobble
  kind:   EnumMember
  detail: Wibble
  sort:   4_Wobble
  desc:   app
  edits:
    [13:20-13:21]: "Wobble"
my_constant
  kind:   Constant
  detail: a
  sort:   3_my_constant
  desc:   app
  edits:
    [13:20-13:21]: "my_constant"
pi
  kind:   Constant
  detail: Float
  sort:   3_pi
  desc:   app
  edits:
    [13:20-13:21]: "pi"
some_function
  kind:   Function
  detail: fn() -> a
  sort:   3_some_function
  desc:   app
  edits:
    [13:20-13:21]: "some_function"
wibble.Wobble
  kind:   EnumMember
  detail: Wibble
  sort:   4_wibble.Wobble
  desc:   app
  edits:
    [13:20-13:21]: "wibble.Wobble"
wibble.Wubble
  kind:   EnumMember
  detail: Wibble
  sort:   4_wibble.Wubble
  desc:   app
  edits:
    [13:20-13:21]: "wibble.Wubble"
